--- a/dist-workspace.toml
+++ b/dist-workspace.toml
@@ -6,6 +6,8 @@ members = ["cargo:cgx", "cargo:cargo-cgx"]
 [dist]
 # The preferred dist version to use in CI (Cargo.toml SemVer syntax)
 cargo-dist-version = "0.30.0"
+# Build binaries with cargo-auditable to embed SBOM data
+cargo-auditable = true
 # CI backends to support
 ci = "github"
 # The installers to generate for each app
