--- a/dist-workspace.toml
+++ b/dist-workspace.toml
@@ -6,8 +6,16 @@ members = ["cargo:cgx", "cargo:cargo-cgx"]
 [dist]
 # The preferred dist version to use in CI (Cargo.toml SemVer syntax)
 cargo-dist-version = "0.30.0"
-# Build binaries with cargo-auditable to embed SBOM data
-cargo-auditable = true
+
+# It would be nice to build binaries with cargo-auditable to embed SBOM data
+#
+# Unfortunately, as of 2025-11-06, there are no `cargo-auditable` releases for aarch64,
+# and cargo-dist doesn't seem to know about that so it tries and fails to download a release on that platform, thus
+# making the release fail.
+#
+# So for now we can't have this nice thing.  See https://github.com/anelson-labs/cgx/issues/27
+cargo-auditable = false
+
 # CI backends to support
 ci = "github"
 # The installers to generate for each app
