--- a/dist-workspace.toml
+++ b/dist-workspace.toml
@@ -5,9 +5,9 @@ members = ["cargo:cgx", "cargo:cargo-cgx"]
 # Config for 'dist'
 [dist]
 # The preferred dist version to use in CI (Cargo.toml SemVer syntax)
-cargo-dist-version = "0.30.0"
-# Build binaries with cargo-auditable to embed SBOM data
-cargo-auditable = true
+cargo-dist-version = "0.30.2"
+# Whether to embed dependency information using cargo-auditable
+cargo-auditable = false
 # CI backends to support
 ci = "github"
 # The installers to generate for each app
